# yads

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  zensical.toml
.github/: RELEASE.md  release-drafter.yml
.github/workflows/: ci.yml  publish-pypi.yml  release-docs.yml  release-drafter.yml  release-python.yml  release.yml  test-deps.yml  test-integration.yml
ci/: README.md  deps-versions.json
ci/dependency-tests/: versions.json
ci/docker/: Dockerfile.deps
ci/integration-tests/: config.json
ci/scripts/: test-deps.sh
docs/: index.md
docs/contributing/: index.md
docs/converters/: index.md  polars.md  pyarrow.md  pydantic.md  pyspark.md  sql.md
docs/develop/: contributing.md  extending.md
docs/examples/: base.py  pyarrow_converter.py
docs/intro/: quick_start.md  specification.md
docs/introduction/: getting_started.md
docs/registries/: filesystem.md
docs/scripts/: sync_examples.py
docs/spec/: constraints.md  index.md  spec.md  types.md
docs/stylesheets/: extra.css
examples/: develop_sqlglot.py  dim_user.yaml  fact_purchase_order.yaml  generate_ddl.py  generate_ddl_unsupported.py  generate_spark_schema.py  reddit_comments.yaml  reddit_submissions.yaml  stg_reddit_thread.yaml  stg_transactions.yaml  test_sqlglotconverter.py
examples/specs/: dim_user.yaml  fact_purchase_order.yaml  simple_spec.sql  simple_spec.yaml  stg_transactions.yaml  yads_spec.sql  yads_spec.yaml
spec/: README.md  yads_spec_latest.json  yads_spec_v0.0.2.json
src/yads/: __init__.py  _dependencies.py  constraints.py  exceptions.py  loader.py  models.py  resources.py  spec.py  specifications.py  translators.py  types.py
tests/: test_constraints.py  test_dependencies.py  test_loader.py  test_spec.py  test_types.py
tests/converters/: test_base_converter.py  test_converter_wrappers.py  test_polars_converter.py  test_pyarrow_converter.py  test_pydantic_converter.py  test_pyspark_converter.py  test_sparksql_converter.py  test_sqlglot_converter.py
tests/loaders/: test_loader_wrappers.py  test_polars_loader.py  test_pyarrow_loader.py  test_pyspark_loader.py  test_spec_builder.py  test_yaml_loader.py
tests/serializers/: test_constraint_serializer.py  (+2 more)
(+134 files in other folders)
