[project]
name = "yads"
version = "0.0.1"
description = "A lightweight library for managing and validating data schemas from YAML specifications"
readme = "README.md"
authors = [
    { name = "Erich Silva", email = "erich.hs13@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "sqlglot>=27.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "check-jsonschema>=0.33.2",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "types-pyyaml>=6.0.12.20250516",
]
pyspark = [
    "pyspark>=3.1.1,<4.0.0",
]
