[project]
name = "yads"
version = "0.0.2"
description = "A lightweight library for managing and validating data schemas from YAML specifications"
readme = "README.md"
authors = [
    { name = "Erich Silva", email = "erich.hs13@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
abfs = [
    "fsspec[abfs]>=2023.1.0",
]
dev = [
    "check-jsonschema>=0.33.2",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "types-pyyaml>=6.0.12.20250516",
]
gcs = [
    "fsspec[gcs]>=2023.1.0",
]
polars = [
    "polars>=1.0.0,<1.35.0",
]
pyarrow = [
    "pyarrow>=15.0.0,<22.0.0",
]
pydantic = [
    "pydantic>=2.0.0,<2.13.0",
]
pyspark = [
    "pyspark>=3.1.1,<4.1.0",
]
s3 = [
    "fsspec[s3]>=2023.1.0",
]
sql = [
    "sqlglot>=27.0.0",
]

[tool.ruff]
line-length = 90
